--- a/css/style.css
+++ b/css/style.css
@@ -131,12 +131,21 @@ img {
 
 /* RESPONSiVE SETTINGS TABLET */
 
- @media all and ( max-width: 768px; ){
-    
+ @media all and ( max-width: 768px ){
+        .container {
+            width: 100%;
+            margin: 0;
+        }
  }
+
+
+
+
 
 /* RESPONSiVE SETTINGS MOBILE */
 
-@media all and ( max-width: 480px; ){
-  
+@media all and (max-width: 480px ){
+    body {
+
+    }
 }
