--- a/css/style.css
+++ b/css/style.css
@@ -145,7 +145,27 @@ img {
 /* RESPONSiVE SETTINGS MOBILE */
 
 @media all and (max-width: 480px ){
-    body {
+    .row {
+        display: block;
+    }
 
+    .col {
+        width: 100%;
+    }
+
+    .why-us .col-left {
+        width: 100%;
+    }
+
+    .why-us .col-right {
+        width: 100%;
+    }
+
+    .steps .col {
+        width: 100%;
+    }
+
+    .lessons .col {
+        width: 100%;
     }
 }
